--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         const map = L.map('map').setView([39.9526, -75.1652], 7);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
         var newYork = L.marker([40.7128, -74.0060]).addTo(map).bindPopup('New York City');
-        var p = L.marker([39.9526, -75.1652]).addTo(map).bindPopup('Philadelphia' + ' Go Eagles');
+        var philadelphia = L.marker([39.9526, -75.1652]).addTo(map).bindPopup('Philadelphia');
         
     </script>
 </body>
 </html>
+
